Development
    Run make indent on all source files
    Remove idledata->mplayer_volume tracking as not needed anymore (to be replaced with other code)
    Rework volume code to control audio device in alsa or pulse mode
    Rework volume code to push volume to mplayer in softvol mode
    Move all volume handling to gmlib/gm_audio
	Enable softvol option when preferred or when audio_device recommends it
	Change "mixer" preference to "alsa-mixer"
	Remove global variable use_pulse_flat_volume
	Remove configure check for PulseAudio flat volume
	libgmlib - gm_audio, add devices similar to gmtk_output_combo_box
	libgmtk - gmtk_output_combo_box, change OUTPUT_TYPE_BASIC to OUTPUT_TYPE_SOFTVOL
	Remove global variable mixer, now handled by audio_device structure
	Remove global variable ao, now handled by audio_device structure
	libgmlib - gm_audio list population and update
	libgmlib - gm_audio skeleton
	Fix typo in gnome-mplayer.schemas.in
	libgmtk - gmtk_output_combo_box, fix memory leak
	Hide fullscreen controls, when active workspace switches Issue #488
	libgmtk - gmtk_output_combo_box, store pulse audio device index id and add getter
	Fix Issue 486, set user agent to something other than Mozilla/x
	Set softvol on by default when not using ALSA Volume
	Run make indent, after changing indent line length from 100 to 120
	gui.c - Update mixer selection dialog when output device changes
	libgmtk - gmtk_output_combo_box, add get_active_card method
	libgmtk - gmtk_output_combo_box, add get_active_type method
	libgmtk - add make indent and make cppcheck to the Makefile
	libgmtk - run make indent
	libgmtk - gmtk_output_combo_box, use enums instead of hardcoded values
	libgmtk - gmtk_media_player, add softvol support
	libgmtk - gmtk_media_player, crash protection fixes
	libgmtk - gmtk_media_player, wait for mplayer thread to be dead when setting state to quit
	Add Prev and Next dbus methods Issue #483, using modified patch in Issue